--- a/index.html
+++ b/index.html
@@ -1,40 +1,49 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>לזכרו של רונאל בן משה | Remember Ronel</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Assistant:wght@200;300;400;600;700&family=Heebo:wght@300;400;700;900&display=swap"
-    rel="stylesheet">
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          fontFamily: {
-            sans: ['Assistant', 'sans-serif'],
-            display: ['Heebo', 'sans-serif'],
-          },
-          colors: {
-            memorial: {
-              dark: '#1a202c',
-              gold: '#d4af37',
-              light: '#f7fafc',
-              blue: '#2c5282',
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>לזכרו של רונאל בן משה | Remember Ronel</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200;300;400;600;700&family=Heebo:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            fontFamily: {
+              sans: ['Assistant', 'sans-serif'],
+              display: ['Heebo', 'sans-serif'],
+            },
+            colors: {
+              memorial: {
+                dark: '#1a202c',
+                gold: '#d4af37',
+                light: '#f7fafc',
+                blue: '#2c5282',
+              }
             }
-          }
+          },
         },
-      },
-    }
-  </script>
+      }
+    </script>
 
-<body class="bg-gray-50 text-gray-800 font-sans antialiased">
-  <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
-</body>
 
+<script type="importmap">
+{
+  "imports": {
+    "react": "https://aistudiocdn.com/react@^19.2.1",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
+    "react/": "https://aistudiocdn.com/react@^19.2.1/",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0"
+  }
+}
+</script>
+</head>
+  <body class="bg-gray-50 text-gray-800 font-sans antialiased">
+    <div id="root"></div>
+      <script type="module" src="/index.tsx"></script>
+  </body>
 </html>
